# cursor_play

./: .gitignore  .pre-commit-config.yaml  DATABASE_QUICKSTART.md  DATABASE_SETUP.md  FIXES_APPLIED.md  JOBS_DB_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  MIGRATION_TO_SQLITE.md  PHASE1_COMPLETE.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml  requirements.txt
.cursor/plans/: job-scraper-script-ab1a05a2.plan.md  jobs-database-schema-b87a64be.plan.md  user-facing_web_layer_4d292abb.plan.md
.cursor/rules/: conventions.mdc  general.mdc  pdr.mdc  prd.mdc  python.mdc
.cursor/schemas/: jobs_schema.sql
.github/workflows/: deploy.yml  tests.yml
app/: Dockerfile
app/common/: __init__.py  txt_converter_ai.py  txt_embedder.py  utils.py
app/core/: __init__.py  company_manager.py  db_utils.py  logging.py  message_queue.py  scrape_coordinator.py  scraper.py
app/db/schema/: db_schema.py
app/models/: company.py  job.py
app/services/: __init__.py  company_manager.py  cv_manager.py  db_utils.py  embed_cv.py  job_embedder.py  job_filter.py  job_filter_embedder.py  job_persister.py  scrape_coordinator.py  scraper.py  test_cv_job_matching.py
app/wheretoplace/: filter_db.py  manual_editor.py  playground_similarity.py
app/workers/: embedder_worker.py  job_manager.py  scheduler.py  scraper_worker.py
common/: txt_embedder.py  utils.py
data/: companies.json  cv_embeddings.pkl  job_match_results.json  jobs_filtered.json  jobs_raw.json  temp_scraped_jobs_20251102_193207.json
data/deprecated/: companies.json  discover_companies_deprecated.py  jobs.json  jobs_raw.json
data/temp/: temp_scraped_jobs_20251128_182859.json
db/schema/: db_schema.py  jobs_schema.sql
debug/: dry_run.py
prompts/: job_matching_v1.yaml
scripts/: __init__.py  company_manager.py  company_selector.py  db_schema.py  db_utils.py  debugscrape.py  discover_companies.py  discover_companies_deprecated.py  embed_cv.py  embed_jobs.py  filter_db.py  filter_jobs.py  init_databases.py  job_embedder.py  job_filter_embedder.py  job_filter_parser.py  job_filter_persister.py  job_persister.py  job_scraper.py  message_queue.py  pdr.mdc  playground_similarity.py  queue.py  scheduler.py  scrape_jobs.py  test_companies_db.py  test_cv_job_matching.py  test_db_integration.py  test_db_structure.py  utils.py
tests/: conftest.py  manual_editor.py  test_companies_db.py  test_cv_job_matching.py  test_database_workflows.py  test_ingestion_utils.py  test_job_parsing.py  test_message_queue.py  test_pipeline_integration.py  test_prompt.py  test_scrape_jobs.py  test_unit.py  verify_jobs_db.py
tests/fixtures/: debug_cardo.html  debug_dream.html  debug_lumenis.html
tests/fixtures/parsed_snapshots/: debug_cardo.json  debug_dream.json  debug_lumenis.json
tests/integration/: test_scraper_jobmanager_flow.py
